Multi‑Cloud Security & Network Baseline /Modules /Azure Network/Vnet.tf
resource "azurerm_virtual_network" "vnet" {
  name                = var.prefix
  resource_group_name = var.resource_group_name
  location            = var.location
  address_space       = ["10.0.0.0/16"]

}
